--- a/work2/CMakeLists.txt
+++ b/work2/CMakeLists.txt
@@ -10,5 +10,6 @@ cmake_minimum_required(VERSION 3.19)
 #add_subdirectory(isu)
 #add_subdirectory(isu2)
 add_subdirectory(regio)
+add_subdirectory(reg2)
 add_subdirectory(qw)
 add_subdirectory(ex-dac-sf)
