Поиск ошибок продолжается ...
Отладка изменений.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,8 +4,17 @@ project(extsrv)
 set(PROJECT_COMPILE_FEATURES cxx_std_14)
 
 set(PROJECT_LINK_LIBRARIES brdlib INIReader concol chappi)
+set(PROJECT_COMPILE_DEFINES SPDDEVAPP)
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "^(Clang|GNU)$")
+    set(PROJECT_COMPILE_OPTIONS -Wno-writable-strings -Wno-format -Wno-int-to-void-pointer-cast)
+    set(PROJECT_COMPILE_OPTIONS ${PROJECT_COMPILE_OPTIONS} -Wno-int-to-pointer-cast -Wno-write-strings) # gcc
+endif()
+
+#add_definitions(-DCHAPPI_LOG_ENABLE)
 
 set(PROJECT_INCLUDE_DIRS 	${PROJECT_SOURCE_DIR}/
+				${PROJECT_SOURCE_DIR}/../contribs/INIReader/include
 				${PROJECT_SOURCE_DIR}/dac/
 				${PROJECT_SOURCE_DIR}/sync/
 				${PROJECT_SOURCE_DIR}/adc/
