--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -21,7 +21,8 @@ set(PROJECT_INCLUDE_DIRS 	${PROJECT_SOURCE_DIR}/
 				${PROJECT_SOURCE_DIR}/../work2/common/
 				)
 
-set(PROJECT_SOURCES ${PROJECT_SOURCE_DIR}/server.cpp 
+set(PROJECT_SOURCES ${PROJECT_SOURCE_DIR}/server.cpp
+					${PROJECT_SOURCE_DIR}/total.cpp 
 					${PROJECT_SOURCE_DIR}/../work2/common/dev_util.cpp
 					${PROJECT_SOURCE_DIR}/dac/exam_edac.cpp
 					${PROJECT_SOURCE_DIR}/dac/workmode.cpp
