--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(sidedrivers)
 add_subdirectory(examples)
 add_subdirectory(apps)
 add_subdirectory(server)
+add_subdirectory(server2)
 add_subdirectory(work)
 add_subdirectory(work2)
 add_subdirectory(work2/temp)
