Настройка сборки и отладки "на одну кнопку".
Изменены удалены лишние задачи в tasks.json.
Добавлен preLaunchTask в отладку.
Удалены все лишние конфигурации из CMakePresets.json.
Макросы заменены на функцию в CMakeLists.txt для корректной работы задачи Configure.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
       "cwd": "${workspaceFolder}",
       "externalConsole": false,
       "stopAtEntry": false,
+      "preLaunchTask": "Build, Deploy & Start",
       "setupCommands": [
         { "text": "-enable-pretty-printing", "description": "Enable GDB pretty printing", "ignoreFailures": true },
         { "text": "set auto-load python-scripts on" },
