--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Clean build & install dir (armhf-Debug)",
+      "label": "Clean Dir",
       "type": "shell",
       "command": "bash",
       "args": [
@@ -12,7 +12,7 @@
       "problemMatcher": []
     },
     {
-      "label": "Configure (armhf-Debug)",
+      "label": "Configure",
       "type": "shell",
       "command": "bash",
       "args": [
@@ -22,36 +22,17 @@
       "problemMatcher": []
     },
     {
-      "label": "Build (armhf-Debug)",
+      "label": "Build",
       "type": "shell",
       "command": "bash",
       "args": [
         "-lc",
-        "cmake --build '${workspaceFolder}/build_arm32/armhf-Debug' -j"
-      ]
-    },
-    {
-      "label": "Rebuild clean (armhf-Debug)",
-      "dependsOn": [
-        "Clean build dir (armhf-Debug)",
-        "Configure (armhf-Debug)",
-        "Build (armhf-Debug)"
-      ]
-    },
-    {
-      "label": "Build (CMake preset)",
-      "type": "shell",
-      "command": "cmake --build ${workspaceFolder}/build_arm32/armhf-Debug/ -j",
-      "problemMatcher": "$gcc"
-    },
-    {
-      "label": "Install (CMake preset)",
-      "type": "shell",
-      "command": "cmake --install ${workspaceFolder}/build_arm32/armhf-Debug/ --prefix ${workspaceFolder}/install/armhf-Debug/",
+        "cmake --build --preset armhf-Debug"
+      ],
       "problemMatcher": []
     },
     {
-      "label": "Deploy via rsync",
+      "label": "Deploy",
       "type": "shell",
       "command": "bash",
       "args": [
@@ -61,13 +42,51 @@
       "problemMatcher": []
     },
     {
-      "label": "Start gdbserver on target",
+      "label": "Start gdbserver",
       "type": "shell",
       "command": "bash",
       "args": [
         "-lc",
-        "ssh root@192.168.5.75 \"set -e; killall extsrv 2>/dev/null || true; chmod +x /root/srv/bin/extsrv; exec gdbserver :1234 /root/srv/bin/extsrv\""
+        "ssh root@192.168.5.75 \"set -e; export LD_LIBRARY_PATH=/root/srv/bin:$LD_LIBRARY_PATH; killall extsrv 2>/dev/null || true; chmod +x /root/srv/bin/extsrv; exec gdbserver :1234 /root/srv/bin/extsrv\""
       ],
+      "problemMatcher": []
+    },
+    {
+      "label": "Start gdbserver & Exit",
+      "type": "shell",
+      "command": "bash",
+      "args": [
+        "-lc",
+        "ssh root@192.168.5.75 \"set -e; export LD_LIBRARY_PATH=/root/srv/bin:$LD_LIBRARY_PATH; killall extsrv 2>/dev/null || true; chmod +x /root/srv/bin/extsrv; nohup gdbserver :1234 /root/srv/bin/extsrv >/tmp/gdbserver.log 2>&1 & sleep 1\""
+      ],
+      "problemMatcher": []
+    },
+    {
+      "label": "Build & Deploy",
+      "dependsOn": [
+        "Configure",
+        "Build",
+        "Deploy"
+      ],
+      "dependsOrder": "sequence",
+      "problemMatcher": []
+    },
+    {
+      "label": "Clean Rebuild & Deploy",
+      "dependsOn": [
+        "Clean Dir",
+        "Build & Deploy"
+      ],
+      "dependsOrder": "sequence",
+      "problemMatcher": []
+    },
+    {
+      "label": "Build, Deploy & Start",
+      "dependsOn": [
+        "Build & Deploy",
+        "Start gdbserver & Exit"
+      ],
+      "dependsOrder": "sequence",
       "problemMatcher": []
     }
   ]
