--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "cwd": "${workspaceFolder}",
       "externalConsole": false,
       "stopAtEntry": false,
-      "preLaunchTask": "Build, Deploy & Start",
+      "preLaunchTask": "Start gdbserver & Exit",
       "setupCommands": [
         { "text": "-enable-pretty-printing", "description": "Enable GDB pretty printing", "ignoreFailures": true },
         { "text": "set auto-load python-scripts on" },
