Добавлены клоны утилит.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -51,11 +51,13 @@ elseif(BUILD_ALL OR EXAM_ALL)
 endif()
 
 if(EXAM_ADC)
-    add_subdirectory(exam-adc)
+    #add_subdirectory(exam-adc)
+    add_subdirectory(adc_mngr)
     add_subdirectory(ex_adc_f)
 endif(EXAM_ADC)
 if(EXAM_EDAC)
-    add_subdirectory(exam-edac)
+    #add_subdirectory(exam-edac)
+    add_subdirectory(edac_mngr)
 endif(EXAM_EDAC)
 if(EXAM_LMFC_ADC)
     add_subdirectory(lmfc-adc)
@@ -64,7 +66,8 @@ if(EXAM_LMFC_DAC)
     add_subdirectory(lmfc-dac)
 endif(EXAM_LMFC_DAC)
 if(EXAM_FMC146V_SYNC)
-    add_subdirectory(exam-fmc146v-sync)
+    #add_subdirectory(exam-fmc146v-sync)
+    add_subdirectory(sync_mngr)
 endif(EXAM_FMC146V_SYNC)
 if(EXAM_FM415S)
     add_subdirectory(exam-fm415s)
